--- a/ReadMe
+++ b/ReadMe
@@ -1,4 +1,6 @@
 ## File you need to download:
+## General info
+This project is simple Lorem ipsum dolor generator.
 - Download the class-descriptions-boxable.csv
   https://storage.googleapis.com/openimages/v6/oidv6-class-descriptions.csv
 - Download the train-annotations-bbox.csv or test-annotations-bbox.csv or validation-annotations-bbox.csv
@@ -6,3 +8,8 @@
   wget https://storage.googleapis.com/openimages/2018_04/validation/validation-images-with-rotation.csv
   wget https://storage.googleapis.com/openimages/2018_04/test/test-images-with-rotation.csv
 - Download the file downloader.py (press Ctrl + S), or directly run: 
+## Technologies
+Project is created with:
+* Lorem version: 12.3
+* Ipsum version: 2.33
+* Ament library version: 999
